app/(routes)/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #f5d1ed;
  --foreground: #292929;
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --background: #292929;
    --foreground: #f5d1ed;
  }
} */

.danfo-regular {
  font-family: "Danfo", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "ELSH" 0;
}

.danfo-comb {
  font-family: "Danfo", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "ELSH" 32;
}

.danfo-claw {
  font-family: "Danfo", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings: "ELSH" 71;
}

.kode-mono-light {
  font-family: "Kode Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.kode-mono-regular {
  font-family: "Kode Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 600;
  font-style: normal;
}

.kode-mono-bold {
  font-family: "Kode Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}

.roboto-flex {
  font-family: "Roboto Flex", sans-serif;
  font-optical-sizing: auto;
  font-weight: 900;
  font-style: normal;
  font-variation-settings:
    "slnt" -10,
    "wdth" 100,
    "GRAD" 0,
    "XOPQ" 96,
    "XTRA" 468,
    "YOPQ" 79,
    "YTAS" 750,
    "YTDE" -203,
    "YTFI" 738,
    "YTLC" 514,
    "YTUC" 712;
}

.jetbrains-mono-medium {
  font-family: "JetBrains Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 500;
  font-style: normal;
}

.jetbrains-mono-extrabold {
  font-family: "JetBrains Mono", monospace;
  font-optical-sizing: auto;
  font-weight: 800;
  font-style: normal;
}

body {
  color: var(--foreground);
  background: var(--background);
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: center; /* Center horizontally */
  align-items: center; /* Center vertically */
  min-height: 100vh; /* Ensure it works for tall content */
  box-sizing: border-box;
}

/* @media (max-width: 640px) {
  body {
    height: 100%;
  }
} */

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.loading {
  overflow: hidden;
}

.svg-white {
  filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(360deg)
    brightness(200%) contrast(100%);
}

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }
  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

.custom-scrollbar::-webkit-scrollbar {
  width: 6px;
  height: 6px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  border-radius: 8px;
  background-color: white;
  border: none;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  border-radius: 8px;
  background-color: #c7cccc;
}

.hidden-scrollbar::-webkit-scrollbar {
  width: 0px;
  height: 0px;
  display: none;
}

.modal-overlay-open {
  display: block;
}
.modal-overlay-close {
  display: hidden;
}

